--- a/lesson22/task5/index.html
+++ b/lesson22/task5/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
-    <input type="text" class="text-input" />
+    <div class="search">
+        <input type="text" class="search__input" />
+        <button class="search__btn">Search</button>
+    </div>
     <script src="index.js"></script>
 </body>
