--- a/lesson22/task1/index.html
+++ b/lesson22/task1/index.html
@@ -4,28 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="rect rect_div">div
-        <p class="rect rect_p">p
+    <div class="rect rect_div">
+        div
+        <p class="rect rect_p">
+            p
             <span class="rect rect_span">span</span>
         </p>
     </div>
-    <div class="rect events-list">
-        <!-- this spans are generated with clicks -->
-        <!-- <span style="color: grey; margin-left: 8px;">div</span>
-        <span style="color: grey; margin-left: 8px;">p</span>
-        <span style="color: green; margin-left: 8px;">p</span>
-        <span style="color: green; margin-left: 8px;">div</span> -->
-    </div>
+    <div class="rect events-list"></div>
     <button class="btn clear-btn">Clear</button>
     <button class="btn remove-handlers-btn">Remove handleds</button>
     <button class="btn attach-handlers-btn">Attach handleds</button>
-
     <script src="index.js"></script>
 </body>
+
+</html>
