--- a/lesson27/task2/index.html
+++ b/lesson27/task2/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <title>Document</title>
-
+    <title>LocalStorageCounterButton</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <div class="page">
+        <div class="counter">
+            <button data-action="decrease" class="counter__button">-</button>
+            <span class="counter__value">0</span>
+            <button data-action="increase" class="counter__button">+</button>
+        </div>
 
-    <script src="index.js"></script>
+    </div>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
