--- a/lesson26/task/index.html
+++ b/lesson26/task/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
+
+
 <body>
     <header class="header">
         <button class="create-event-btn">
@@ -17,15 +19,18 @@
         </button>
         <div class="navigation">
             <button class="navigation__today-btn">Today</button>
-            <button class="navigation__icon-btn"></button>
-            <i class="fas fa-chevron-left"></i>
-            <button class="navigation__icon-btn"></button>
-            <i class="fas fa-chevron-right"></i>
+            <button class="navigation__icon-btn">
+                 <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="navigation__icon-btn">
+                 <i class="fas fa-chevron-right"></i>
+            </button>
             <span class="navigation__displayed-month">Jun - Jul 2020</span>
         </div>
     </header>
+
     <section class="calendar">
-        <header class="claendar__header">
+        <header class="calendar__header">
             <div class="calendar__day-label">
                 <span class="calendar__day-name">ПН</span>
                 <span class="calendar__day-number">27</span>
@@ -55,8 +60,227 @@
                 <span class="calendar__day-number">27</span>
             </div>
         </header>
-        <div class="calendar__sidebar"></div>
-        <div class="calendar__main"></div>
+
+        <div class="calendar__body">
+            <div class="calendar__sidebar sidebar">
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time"></span>
+                </div>
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time">01:00</span>
+                </div>
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time">02:00</span>
+                </div>
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time">03:00</span>
+                </div>
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time">04:00</span>
+                </div>
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time">05:00</span>
+                </div>
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time">06:00</span>
+                </div>
+                <div class="sidebar__time-slot">
+                    <span class="sidebar__time">07:00</span>
+                </div>
+            </div>
+
+            <div class="calendar__week">
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                </div>
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                </div>
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                </div>
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                </div>
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+
+                </div>
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+
+                </div>
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+
+                </div>
+                <div class="calendar__day">
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+                    <div class="calendar__hour"></div>
+
+                </div>
+            </div>
+        </div>
     </section>
     <script src="index.js"></script>
 </body>
