--- a/lesson27/task3/index.html
+++ b/lesson27/task3/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>ToDo List</title>
+</head>
+
 <body>
     <h1 class="title">Todo List</h1>
-    <link rel="stylesheet" href="styles.css">
     <main class="todo-list">
         <div class="actions">
             <input class="task-input" type="text">
@@ -11,3 +20,5 @@
     </main>
     <script src="src/scripts/index.js" type="module"></script>
 </body>
+
+</html>
